fix: #309 contrasting background color to the text in dropdowns

--- a/packages/tdb-dashboard/src/App.css
+++ b/packages/tdb-dashboard/src/App.css
@@ -367,8 +367,8 @@ div.progress-bar-container {
 /* ---------- form control custom dark mode ---------- */
 .form-control {
   color: #adb5bd !important;
-  /*background-color: #444 !important;*/
-  background-color: transparent !important;
+  background-color: #000 !important;
+  /* background-color: transparent !important; */
   border-color: rgb(102, 102, 102) !important;
   min-height: 49px !important;
 }
